--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name : </label>
+		<input type="text" id="name" required><br>
+		<label for="email">Email : </label>
+		<input type="email" id="email" required><br>
+		<label for="gender">Gender : </label>
+		<lable for="male"> Male </lable><input type="radio" name="gender" required>
+		<lable for="female"> Female </lable><input type="radio" name="gender" required><br>
+		<label for="laptop">Laptop Brands : </label>
+		<select id="laptop">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select><br>
+		<label for="age">Age : </label>
+		<input type="number" id="age" required><br>
+		<label for="dob">Date of Birth : </label>
+		<input type="Date" id="dob" required><br>
+		<label for="Password">Password : </label>
+		<input type="Password" id="password" required><br>
+		<label for="portfolio">Portfolio URL : </label>
+		<input type="url" id="portfolio" required><br>
+		<button type="button">Submit Button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
