--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 		<input type="number" id="age" required><br>
 		<label for="dob">Date of Birth : </label>
 		<input type="Date" id="dob" required><br>
-		<label for="Password">Password : </label>
+		<label for="password">Password : </label>
 		<input type="Password" id="password" required><br>
 		<label for="portfolio">Portfolio URL : </label>
 		<input type="url" id="portfolio" required><br>
