--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		<input type="Password" id="password" required><br>
 		<label for="portfolio">Portfolio URL : </label>
 		<input type="url" id="portfolio" required><br>
-		<button type="button">Submit Button</button>
+		<button type="submit">Submit Button</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
